--- a/02-css-flexbox/style.css
+++ b/02-css-flexbox/style.css
@@ -4,8 +4,8 @@ ul {
   padding: 20px;
 
   /* Flex container properties */
-  /* display: flex; */
-  display: inline-flex;
+  display: flex;
+  /* display: inline-flex; */
 }
 
 /* Flex item => Children */
@@ -17,4 +17,29 @@ li {
   margin: 20px;
   width: 100px;
   text-align: center;
+}
+
+/* Flex item => Children */
+section {
+  width: 20rem;
+  background-color: lightslategray;
+  padding: 1.5rem;
+  margin: 1rem;
+  color: white;
+}
+
+/* section h2,
+section p {
+  background-color: #20b2aa;
+} */
+
+div.content {
+  background-color: #20b2aa;
+  padding: 1rem;
+}
+
+/* Flex Container => Parent*/
+body {
+  display: flex;
+  flex-wrap: wrap; /* Just demo for responsive default no-wrap */
 }
